Made google oauth2

--- a/.env
+++ b/.env
@@ -2,5 +2,12 @@ DB_USER=admin
 DB_PASSWORD=admin
 DB_NAME=eda
 
-API_SECRET=mysecretstring
-TOKEN_HOUR_LIFESPAN=1
+API_SECRET=VewEmfvE1Jjh3cAAG8dUm2n3ZuKAHDdo
+TOKEN_HOUR_LIFESPAN=168
+
+GOOGLE_CLIENT_ID=11376641219-p35qc8ueg6sve8a4rsddqtomdhtb2smo.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+LOGGER_OUTPUT_PATH=/logs
+
+REDIS_PASSWORD=admin
