--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,22 +9,27 @@ services:
       - "8080:8080"
     volumes:
       - ./:/cmd
+    depends_on:
+      - redis
+      - db
   db:
     image: postgres:alpine
     environment:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_NAME}
+    restart: always
     ports:
       - "5432:5432"
     volumes:
       - postgres-db:/var/lib/postgresql/data
-#  redis:
-#    container_name: "redis"
-#    image: redis:alpine
-#    command: redis-server /usr/local/etc/redis/redis.conf --requirepass ${REDIS_PASSWORD}
-#    ports:
-#      - "6379:6379"
+  redis:
+    image: redis:alpine
+    restart: always
+    command: /bin/sh -c "redis-server --requirepass $$REDIS_PASSWORD"
+    env_file:
+      - .env
 
 volumes:
   postgres-db:
+  redis_data:
