Made phone sms auth

--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ GOOGLE_CLIENT_SECRET=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
 LOGGER_OUTPUT_PATH=/logs
 
 REDIS_PASSWORD=admin
+
+SMS_API_KEY=AB6CC372-3C9C-3B2C-EFD8-7AA9EA0585A0
