Add pgAdmin and open db files

--- a/.env
+++ b/.env
@@ -13,3 +13,6 @@ LOGGER_OUTPUT_PATH=/logs
 REDIS_PASSWORD=admin
 
 SMS_API_KEY=AB6CC372-3C9C-3B2C-EFD8-7AA9EA0585A0
+
+PDADMIN_DEFAULT_EMAIL=grishabatov83@gmail.com
+PDADMIN_DEFAULT_PASSWORD=admin
