--- a/.env
+++ b/.env
@@ -16,3 +16,6 @@ SMS_API_KEY=AB6CC372-3C9C-3B2C-EFD8-7AA9EA0585A0
 
 PDADMIN_DEFAULT_EMAIL=grishabatov83@gmail.com
 PDADMIN_DEFAULT_PASSWORD=admin
+
+RABBITMQ_DEFAULT_USER=admin
+RABBITMQ_DEFAULT_PASS=admin
