refactor + tests docker-compose

--- a/.env
+++ b/.env
@@ -10,9 +10,11 @@ GOOGLE_CLIENT_SECRET=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
 
 LOGGER_OUTPUT_PATH=/logs
 
+REDIS_ADDR=redis:6379
 REDIS_PASSWORD=admin
 
 SMS_API_KEY=AB6CC372-3C9C-3B2C-EFD8-7AA9EA0585A0
+SMS_IS_TEST=1
 
 PDADMIN_DEFAULT_EMAIL=grishabatov83@gmail.com
 PDADMIN_DEFAULT_PASSWORD=admin
