--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,6 +83,17 @@ services:
         condition: service_started
       rabbitmq:
         condition: service_healthy
+
+  test_web:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile
+    env_file:
+      - .env
+    volumes:
+      - .:/app
+    command: sh -c "cd /app && go test ./..."
+
   go_sql:
     build:
       context: .
@@ -99,6 +110,7 @@ services:
         condition: service_healthy
       pdadmin:
         condition: service_started
+
 #  qodana:
 #    image: jetbrains/qodana:latest
 #    volumes:
