--- a/docker/Dockerfile-go-sql
+++ b/docker/Dockerfile-go-sql
@@ -1,7 +1,5 @@
 FROM golang:latest
 
-RUN go install github.com/air-verse/air@latest
-
 WORKDIR /app/sql
 
 COPY . .
@@ -10,4 +8,4 @@ RUN go mod download
 
 RUN go mod tidy
 
-CMD ["air"]
+CMD ["go", "run", "cmd/sql/main.go"]
