Made gRPC client-server for auth Refactoring

--- a/.env
+++ b/.env
@@ -21,3 +21,6 @@ PDADMIN_DEFAULT_PASSWORD=admin
 
 RABBITMQ_DEFAULT_USER=admin
 RABBITMQ_DEFAULT_PASS=admin
+
+CERT_FILE=/app/server.crt
+KEY_FILE=/app/server.key
